Made changes to package.json and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
     <!-- Edit meta tags for SEO -->
     <title>VADME | PORTFOLIO</title>
     <meta name="title" content="VADME | PORTFOLIO">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta name="description" content="VIJAY ARUN DODDI PORTFOLIO">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://arundoddi.github.io/vadme">
     <meta property="og:title" content="VADME | PORTFOLIO">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:description" content="VIJAY ARUN DODDI PORTFOLIO">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
